[project]
name = "ltx-msr-torch"
version = "0.1.0"
description = "PyTorch-oriented reconstruction of a ComfyUI LTX 2.3 MSR workflow"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pillow",
  "safetensors",
  "torch",
]

[project.optional-dependencies]
opencv = ["opencv-python"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
